@@ -123,6 +123,9 @@
 # Sony UP-DR150
 0x054c 0x01e8 blacklist
 
+# Mitsubishi CP-D70/CP-D707
+0x06d3 0x3b30 blacklist
+
 # DNP DS40 + Citizen CX
 0x1343 0x0003 blacklist
 
